@@ -1,3 +1,4 @@
 - Each message now contains the UUID: you can use it for message manipulation
 - Opening the context menu is now more stable
 - Context menu is now customizable and can include additional buttons from plugins
+- More plugin callbacks
